fix overflowing of text

--- a/src/App.css
+++ b/src/App.css
@@ -756,7 +756,6 @@ textarea.qr-string {
 
 .copy-btn {
   background: #698cf7;
-  width: 62px;
   height: 25px;
   font-size: 10px;
   border-radius: 5px;
